--- a/examples/ChimneySwap/app/src/main/res/layout/activity_employee.xml
+++ b/examples/ChimneySwap/app/src/main/res/layout/activity_employee.xml
@@ -37,7 +37,7 @@
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="1"
-        tools:context="xyz.thepathfinder.www.pathfindersampleandroidapp.MapsActivity" />
+        tools:context="xyz.thepathfinder.pathfindersampleandroidapp.MapsActivity" />
 
     <LinearLayout
         android:layout_width="match_parent"
