--- a/examples/ChimneySwap/app/src/main/res/layout/activity_post_chimney.xml
+++ b/examples/ChimneySwap/app/src/main/res/layout/activity_post_chimney.xml
@@ -9,7 +9,7 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="xyz.thepathfinder.www.chimneyswap.PostChimneyActivity">
+    tools:context="xyz.thepathfinder.chimneyswap.PostChimneyActivity">
 
     <Button
         android:id="@+id/add_chimney_image"
