--- a/examples/ChimneySwap/app/src/main/res/layout/activity_trade_chimney.xml
+++ b/examples/ChimneySwap/app/src/main/res/layout/activity_trade_chimney.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context="xyz.thepathfinder.www.chimneyswap.TradeChimneyActivity">
+    tools:context="xyz.thepathfinder.chimneyswap.TradeChimneyActivity">
 
     <ListView
         android:id="@+id/chimney_list"
